--- a/.prettierrc
+++ b/.prettierrc
@@ -13,7 +13,20 @@
 		"^(next/(.*)$)|^(next$)",
 		"",
 		"<THIRD_PARTY_MODULES>",
-		"^(?!@/|\\.).+"
+		"^(?!@/|\\.).+",
+		"",
+		"^@/types/(.*)$",
+		"^@/lib/(.*)$",
+		"^@/hooks/(.*)$",
+		"^@/actions/(.*)$",
+		"^@/schemas/(.*)$",
+		"",
+		"^@/components/ui/(.*)$",
+		"^@/components/(.*)$",
+		"^./_components/(.*)$",
+		"",
+		"^@/",
+		"^[./]"
 	],
 	"importOrderSeparation": false,
 	"importOrderSortSpecifiers": true,
