--- a/package.json
+++ b/package.json
@@ -3,22 +3,30 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack",
+		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"prepare": "husky"
+		"prepare": "husky",
+		"generate:types": "payload generate:types"
 	},
 	"dependencies": {
+		"@payloadcms/db-mongodb": "^3.35.1",
+		"@payloadcms/next": "^3.35.1",
+		"@payloadcms/payload-cloud": "^3.35.1",
+		"@payloadcms/richtext-lexical": "^3.35.1",
 		"@radix-ui/react-dialog": "^1.1.10",
 		"@radix-ui/react-scroll-area": "^1.2.5",
 		"@radix-ui/react-slot": "^1.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"graphql": "^16.8.1",
 		"lucide-react": "^0.501.0",
 		"next": "15.3.1",
+		"payload": "^3.35.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"sharp": "^0.34.1",
 		"tailwind-merge": "^3.2.0",
 		"tw-animate-css": "^1.2.7"
 	},
