--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"start": "next start",
 		"lint": "next lint",
 		"prepare": "husky",
-		"generate:types": "payload generate:types"
+		"generate:types": "payload generate:types",
+		"db:fresh": "payload migrate:fresh",
+		"db:seed": "bun run src/scripts/seed-categories.ts"
 	},
 	"dependencies": {
 		"@payloadcms/db-mongodb": "^3.35.1",
