--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
 		"@radix-ui/react-dialog": "^1.1.10",
 		"@radix-ui/react-scroll-area": "^1.2.5",
 		"@radix-ui/react-slot": "^1.2.0",
+		"@tanstack/react-query": "^5.74.4",
+		"@tanstack/react-query-devtools": "^5.74.6",
+		"@trpc/client": "^11.1.1",
+		"@trpc/server": "^11.1.1",
+		"@trpc/tanstack-react-query": "^11.1.1",
 		"class-variance-authority": "^0.7.1",
+		"client-only": "^0.0.1",
 		"clsx": "^2.1.1",
 		"graphql": "^16.8.1",
 		"lucide-react": "^0.501.0",
@@ -28,9 +34,12 @@
 		"payload": "^3.35.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"server-only": "^0.0.1",
 		"sharp": "^0.34.1",
+		"superjson": "^2.2.2",
 		"tailwind-merge": "^3.2.0",
-		"tw-animate-css": "^1.2.7"
+		"tw-animate-css": "^1.2.7",
+		"zod": "^3.24.3"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
