--- a/.prettierrc
+++ b/.prettierrc
@@ -20,6 +20,7 @@
 		"^@/hooks/(.*)$",
 		"^@/actions/(.*)$",
 		"^@/schemas/(.*)$",
+		"^@/modules/(.*)$",
 		"^@/trpc/(.*)$",
 		"",
 		"^@/components/ui/(.*)$",
