--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
 		"db:seed": "bun run src/scripts/seed-categories.ts"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.0.1",
 		"@payloadcms/db-mongodb": "^3.35.1",
 		"@payloadcms/next": "^3.35.1",
 		"@payloadcms/payload-cloud": "^3.35.1",
 		"@payloadcms/richtext-lexical": "^3.35.1",
 		"@radix-ui/react-dialog": "^1.1.10",
+		"@radix-ui/react-label": "^2.1.4",
 		"@radix-ui/react-scroll-area": "^1.2.5",
 		"@radix-ui/react-slot": "^1.2.0",
 		"@tanstack/react-query": "^5.74.4",
@@ -31,11 +33,14 @@
 		"graphql": "^16.8.1",
 		"lucide-react": "^0.501.0",
 		"next": "15.3.1",
+		"next-themes": "^0.4.6",
 		"payload": "^3.35.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.56.1",
 		"server-only": "^0.0.1",
 		"sharp": "^0.34.1",
+		"sonner": "^2.0.3",
 		"superjson": "^2.2.2",
 		"tailwind-merge": "^3.2.0",
 		"tw-animate-css": "^1.2.7",
