chore: refactor folder structure and format codebase

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,11 +3,14 @@
 	"semi": true,
 	"bracketSpacing": true,
 	"trailingComma": "all",
-	"printWidth": 100,
+	"printWidth": 80,
 	"useTabs": true,
 	"tabWidth": 2,
 	"endOfLine": "lf",
-	"plugins": ["@ianvs/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
+	"plugins": [
+		"@ianvs/prettier-plugin-sort-imports",
+		"prettier-plugin-tailwindcss"
+	],
 	"importOrder": [
 		"^(react/(.*)$)|^(react$)",
 		"^(next/(.*)$)|^(next$)",
@@ -15,10 +18,11 @@
 		"<THIRD_PARTY_MODULES>",
 		"^(?!@/|\\.).+",
 		"",
+		"^@/trpc/(.*)$",
+		"",
 		"^@/lib/(.*)$",
 		"^@/hooks/(.*)$",
 		"^@/modules/(.*)$",
-		"^@/trpc/(.*)$",
 		"",
 		"^@/components/ui/(.*)$",
 		"^@/components/(.*)$",
