--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@payloadcms/next": "^3.35.1",
 		"@payloadcms/payload-cloud": "^3.35.1",
 		"@payloadcms/richtext-lexical": "^3.35.1",
+		"@radix-ui/react-checkbox": "^1.2.3",
 		"@radix-ui/react-dialog": "^1.1.10",
 		"@radix-ui/react-label": "^2.1.4",
 		"@radix-ui/react-scroll-area": "^1.2.5",
