--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "multitenant-ecommerce",
 	"version": "0.1.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
@@ -17,6 +18,7 @@
 		"@payloadcms/db-mongodb": "^3.35.1",
 		"@payloadcms/next": "^3.35.1",
 		"@payloadcms/payload-cloud": "^3.35.1",
+		"@payloadcms/plugin-multi-tenant": "^3.35.1",
 		"@payloadcms/richtext-lexical": "^3.35.1",
 		"@radix-ui/react-checkbox": "^1.2.3",
 		"@radix-ui/react-dialog": "^1.1.10",
