--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@radix-ui/react-checkbox": "^1.2.3",
 		"@radix-ui/react-dialog": "^1.1.10",
 		"@radix-ui/react-label": "^2.1.4",
+		"@radix-ui/react-progress": "^1.1.6",
 		"@radix-ui/react-scroll-area": "^1.2.5",
 		"@radix-ui/react-slot": "^1.2.0",
 		"@tanstack/react-query": "^5.75.2",
