Implement stripe connect

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@payloadcms/payload-cloud": "^3.35.1",
 		"@payloadcms/plugin-multi-tenant": "^3.35.1",
 		"@payloadcms/richtext-lexical": "^3.35.1",
+		"@payloadcms/ui": "^3.35.1",
 		"@radix-ui/react-checkbox": "^1.2.3",
 		"@radix-ui/react-dialog": "^1.1.10",
 		"@radix-ui/react-label": "^2.1.4",
