--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.0.1",
-		"@payloadcms/db-mongodb": "^3.35.1",
-		"@payloadcms/next": "^3.35.1",
-		"@payloadcms/payload-cloud": "^3.35.1",
-		"@payloadcms/plugin-multi-tenant": "^3.35.1",
-		"@payloadcms/richtext-lexical": "^3.35.1",
-		"@payloadcms/ui": "^3.35.1",
+		"@payloadcms/db-mongodb": "3.35.1",
+		"@payloadcms/next": "3.35.1",
+		"@payloadcms/payload-cloud": "3.35.1",
+		"@payloadcms/plugin-multi-tenant": "3.35.1",
+		"@payloadcms/richtext-lexical": "3.35.1",
+		"@payloadcms/storage-vercel-blob": "3.35.1",
+		"@payloadcms/ui": "3.35.1",
 		"@radix-ui/react-checkbox": "^1.2.3",
 		"@radix-ui/react-dialog": "^1.1.10",
 		"@radix-ui/react-label": "^2.1.4",
@@ -40,7 +41,7 @@
 		"next": "15.3.1",
 		"next-themes": "^0.4.6",
 		"nuqs": "^2.4.3",
-		"payload": "^3.35.1",
+		"payload": "3.35.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.56.1",
